# spark-and-all-things-streaming

./: .gitignore  .gitmodules  README.md  app.py  locustfile-helloworld.py  locustfile.py  pyproject.toml  stonks
notebooks/: kafka_hello_world.ipynb  spark_connect.ipynb  spark_delta_lake.ipynb  spark_iceberg.ipynb  spark_kafka.ipynb  spark_questdb.ipynb  spark_thrift_odbc.ipynb
questdb/: docker-compose.yaml
spark-server/: Dockerfile  README.md  docker-compose.yaml  file_write.py  socket_server.py  socket_stream.py
