[tool.poetry]
description = "Some streaming related stuff"
name = "my_streaming"
version = "0.1.0"
authors = ["kagenihisomi"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyspark = {extras = ["connect", "pandas-on-spark", "sql"], version = "^3.5.0"}
findspark = "^2.0.1"
ipykernel = "^6.26.0"

locust = "^2.18.1"
locust-plugins = {extras = ["dashboards","kafka"], version = "^4.3.4"}
pyodbc = "^5.1.0"
kafka-python = "^2.0.2"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
aioboto3 = "^12.3.0"

# Dependabot
pyarrow = ">=14.0.1"

[tool.poetry.group.aws]
optional = true
[tool.poetry.group.aws.dependencies]
aws-msk-iam-sasl-signer-python = "^1.0.1"
awswrangler = "^3.7.1"