[tool.poetry]
description = "Some streaming related stuff"
name = "my_streaming"
version = "0.1.0"
authors = ["kagenihisomi"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"
pyspark = { extras = ["connect", "pandas-on-spark", "sql"], version = "3.5.5" }
findspark = "^2.0.1"
ipykernel = "^6.26.0"

# locust = "^2.18.1"
# locust-plugins = {extras = ["dashboards","kafka"], version = "^4.3.4"}
kafka-python = "^2.0.2"
python-dotenv = "^1.0.1"

# Dependabot
pyarrow = ">=14.0.1"
pandas = "^2.2.3"
setuptools = "^75.3.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
polars = "^1.24.0"
numpy = "<2"
sqlalchemy = "^2.0.38"
adbc-driver-manager = "^1.5.0"
adbc-driver-postgresql = "^1.5.0"
jinja2 = "^3.1.6"

[tool.poetry.group.aws]
optional = true
[tool.poetry.group.aws.dependencies]
aws-msk-iam-sasl-signer-python = "^1.0.1"
awswrangler = "^3.7.1"
[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
